--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path_provider: ^0.5.0+1
   image: ^2.0.7
   intl:
+  flutter_shine: ^0.0.5
 
 
 dev_dependencies:
@@ -35,7 +36,12 @@ flutter:
     - family: Signatra
       fonts:
         - asset: assets/fonts/Signatra.ttf
-
+    - family: Oswall
+      fonts:
+        - asset: assets/fonts/Oswald-VariableFont_wght.ttf
+    - family: Kaushan
+      fonts:
+        - asset: assets/fonts/KaushanScript-Regular.ttf
   assets:
     - images/welcome.png
     - images/login.png
